--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,30 @@
 {% extends "layout.html" %}
 {% block body %}
-  <h2>Login</h2>
-  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
-  <form action="{{ url_for('login') }}" method=post>
-    <dl>
-      <dt>Username:
-      <dd><input type=text name=username>
-      <dt>Password:
-      <dd><input type=password name=password>
-      <dd><input type=submit value=Login>
-    </dl>
-  </form>
+    <script type="text/javascript">
+        function set_openid(openid, pr)
+        {
+            u = openid.search('<username>')
+            if (u != -1)
+            {
+                user = promt('Enter your ' + pr + ' username:')
+                openid = openid.substr(0, u) + user
+            }
+            form = document.forms['login']
+            form.elements['openid'].value = openid
+        }
+    </script>
+    <h1>Sign In</h1>
+    <form action="" method="post" name="login">
+        {{ form.hidden_tag() }}
+        <p>
+        {% for field in form if field.widget.input_type != 'hidden' %}
+            {{ field.label }}
+            {{ field }}
+        {% endfor %}
+        |{% for pr in providers %}
+            <a href="javascript:set_openid('{{pr.url}}', '{{pr.name}}');">{{pr.name}}</a> |
+        {% endfor %}
+        </p>
+        <p><input type="submit" value="Sign In"></p>
+    </form>
 {% endblock %}
