--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,30 +1,9 @@
-{% extends "layout.html" %}
-{% block body %}
-    <script type="text/javascript">
-        function set_openid(openid, pr)
-        {
-            u = openid.search('<username>')
-            if (u != -1)
-            {
-                user = promt('Enter your ' + pr + ' username:')
-                openid = openid.substr(0, u) + user
-            }
-            form = document.forms['login']
-            form.elements['openid'].value = openid
-        }
-    </script>
+<!doctype html>
+<Head>
+    <title>DC</title>
+    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+</Head>
+<body>
     <h1>Sign In</h1>
-    <form action="" method="post" name="login">
-        {{ form.hidden_tag() }}
-        <p>
-        {% for field in form if field.widget.input_type != 'hidden' %}
-            {{ field.label }}
-            {{ field }}
-        {% endfor %}
-        |{% for pr in providers %}
-            <a href="javascript:set_openid('{{pr.url}}', '{{pr.name}}');">{{pr.name}}</a> |
-        {% endfor %}
-        </p>
-        <p><input type="submit" value="Sign In"></p>
-    </form>
-{% endblock %}
+    <a href="{{url_vk}}">Sing In with vk</a>
+</body>
