--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,16 +1,15 @@
 <!doctype html>
 <title>DC</title>
-<link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 <div class=page>
 <p style="text-align:left;">
-<font size="7pt" color="#CCCCCC">Dream Crusher</font>
+Dream Crusher - The worst teacher you ever had
 <span style="float:right;">
     {% if g.user.is_authenticated %}
             {% if g.user.avatar_url %}
                 <img class="img-circle" src="{{g.user.avatar_url}}"/>
             {% endif %}
-            <font color="#CCCCCC" size="5pt"> {{ g.user.nickname }}
-            | <a href="{{ url_for('logout') }}">Logout</a></font>
+            {{ g.user.nickname }}| <a href="{{ url_for('auth.logout') }}">Logout</a>
         {% endif %}
 </span>
 </p>
