--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,13 @@
-<!doctype html>
-<Head>
-    <title>DC</title>
-    <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
-</Head>
+{% extends "layout.html" %}
+{% block body %}
 <body>
-    <h1>Sign In</h1>
-    <a href="{{url_vk}}">Sing In with vk</a>
+    <div class="auth">
+        <div class="auth__section_logo">
+        <img src="../static/images/icons/dreams_big_logo.png">
+        </div>
+        <div class="auth__section">
+            <a href="{{url_for('auth.try_vk_auth')}}" class="auth__social_btn auth__social_btn_vk">Sing In with Vk</a>
+        </div>
+    </div>
 </body>
+{% endblock %}
