added Month models, edit base schema #DC-2 work development 1h20m added month document type

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-<h1>{{month}}</h1>
+{% for month in g.user.months%}
+{{month}}
+{% endfor%}
 {% endblock %}
