--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,11 +1,10 @@
-@import "compass/css3";
 
 body            {
     text-align: center;
     font-family: Verdana, sans-serif;
     background: #fff;
     width: 100%;
-    margin auto;
+    margin: auto;
 }
 a, h1, h2       { color: #383A36; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
@@ -81,39 +80,44 @@ h2              { font-size: 1.2em; }
 
 
 .table-editable {
-  position: relative;
-
-  .glyphicon {
-    font-size: 20px;
-  }
+    position: relative;
 }
+
+.glyphicon {
+font-size: 20px;
+}
+
 
 .table-remove {
-  color: #700;
-  cursor: pointer;
+    color: #700;
+    cursor: pointer;
+}
 
-  &:hover {
+.table-remove:hover {
     color: #f00;
   }
-}
+
 
 .table-up, .table-down {
-  color: #007;
-  cursor: pointer;
-
-  &:hover {
+    color: #007;
+    cursor: pointer;
+}
+.table-up:hover, .table-down:hover {
     color: #00f;
   }
-}
+
 
 .table-add {
-  color: #070;
-  cursor: pointer;
-  position: absolute;
-  top: 8px;
-  right: 0;
-
-  &:hover {
+    color: #070;
+    cursor: pointer;
+    position: absolute;
+    top: 8px;
+    right: 0;
+}
+.table-add:hover {
     color: #0b0;
   }
+.hide {
+    display:none;
 }
+
