--- a/app/templates/dreams.html
+++ b/app/templates/dreams.html
@@ -1,56 +1,21 @@
 {% extends "layout.html" %}
 {% block body %}
 
-    <script  type="text/javascript" src="../static/js/jquery-2.2.4.min.js"> </script>
-    <script  type="text/javascript" src="../static/js/dreams_scripts.js"> </script>
-    {% if g.user.is_authenticated %}
-    <div id="table" class="table-editable">
-        <br/><br/>
-        <span class="table-add glyphicon">add</span>
-        <table class="table">
-            <tr>
-                <th>Title</th>
-                <th>Estimated time</th>
-                <th></th>
-                <th></th>
-            </tr>
-            {% if dreams_list %}
-                <tr>
-                    {% for dream in dreams_list %}
-                        <td contenteditable="true">{{dream.title}}</td>
-                        <td contenteditable="true">{{dream.estimated_time}}</td>
-                        <td>
-                            <span class="table-remove glyphicon glyphicon-remove">remove</span>
-                        </td>
-                        <td>
-                            <span class="table-up glyphicon ">top</span>
-                            <span class="table-down glyphicon ">down</span>
-                        </td>
-                    {% endfor %}
-
-                </tr>
-            {% endif %}
-            <!-- This is our clonable table line -->
-            <tr class="hide" >
-                <td contenteditable="true">New Dream, new hope</td>
-                <td contenteditable="true">40</td>
-                <td>
-                    <span class="table-remove glyphicon glyphicon-remove">remove</span>
-                </td>
-                <td>
-                    <span class="table-up glyphicon glyphicon-arrow-up">top</span>
-                    <span class="table-down glyphicon glyphicon-arrow-down">down</span>
-                </td>
-            </tr>
-        </table>
-    </div>
-
-
-
-        {% for dream in dreams_list %}
-            {{dream}} | <a href="{{ url_for('dreams.dreams_edit')}}">edit</a>
-                      | <a href="{{ url_for('dreams.dreams_delete')}}">delete</a>
+<script  type="text/javascript" src="../static/js/jquery-2.2.4.min.js"> </script>
+<script  type="text/javascript" src="../static/js/dreams_scripts.js"> </script>
+<br/>
+{% if g.user.is_authenticated %}
+    <form action="" method="post">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+        {% for dream in form.dreams %}
+            {{dream.id_}}{{dream.title.label}}: {{dream.title}} | {{dream.estimated_time.label}}: {{dream.estimated_time}} <br/>
         {% endfor %}
-        <a href="{{ url_for('dreams.dreams_add')}}">add new dream</a>
-    {% endif %}
+        <p><input type="submit" value="Save"></p>
+        {% for error in form.errors %}
+            <span style="color: red;">[{{error}}]</span>
+        {% endfor %}<br>
+    </form>
+{% endif %}
 {% endblock %}
+
+
