--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,21 +1,25 @@
 <!doctype html>
+<html>
 <head>
     <title>DC</title>
+    <script  type="text/javascript" src="../static/js/jquery-2.2.4.min.js"> </script>
+    <script  type="text/javascript" src="../static/js/dreams_scripts.js"> </script>
 </head>
 <body>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
     <div class=page>
-    <p style="text-align:left;">
-    Dream Crusher - The worst teacher you ever had
-    <span style="float:right;">
-        {% if g.user.is_authenticated %}
-            {% if g.user.avatar_url %}
-                <img class="img-circle" src="{{g.user.avatar_url}}"/>
-            {% endif %}
-            {{ g.user.nickname }}| <a href="{{ url_for('auth.logout') }}">Logout</a>
-        {% endif %}
-    </span>
-    </p>
-      {% block body %}{% endblock %}
+        <div id="header">
+            <span class="avatar">Dream Crusher - The worst teacher you ever had</span>
+            <span class="avatar">
+                {% if g.user.is_authenticated %}
+                    {% if g.user.avatar_url %}
+                        <img id="img-circle" src="{{g.user.avatar_url}}"/>
+                    {% endif %}
+                    {{ g.user.nickname }}| <a href="{{ url_for('auth.logout') }}">Logout</a>
+                {% endif %}
+            </span>
+        </div>
+          {% block body %}{% endblock %}
     </div>
 </body>
+</html>
