--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -11,7 +11,7 @@ h1, h2          { font-family: 'Georgia', serif; margin: 0; }
 h2              { font-size: 1.2em; }
 
 .page           { margin: 2em auto; width: 60%;
-                  padding: 0.8em; background: #bcd; }
+                  padding: 0.8em; }
 
 
 
@@ -116,4 +116,19 @@ h2              { font-size: 1.2em; }
 }
 #dream_table, .table_line, .table_row {
     border: 1px solid dodgerblue;
+}
+
+#body_404 {
+    background: black;
+}
+
+#h1_404 {
+    color: #ccc;
+    margin: auto;
+    text-align: center;
+    font-size: 7em;
+    padding-bottom: 1em;
+}
+#img_404 {
+    padding: 0 0em 5em 0em;
 }
