--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %}
-{% block body %}
+# extends "layout.html"
+# block body
 <body>
     <div class="auth">
         <div class="auth__section_logo">
@@ -10,4 +10,4 @@
         </div>
     </div>
 </body>
-{% endblock %}
+# endblock
