--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,20 +7,32 @@
 </head>
 <body>
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
-     <div id="header">
-            <span class="avatar">Dream Crusher - The worst teacher you ever had</span>
-            <span class="avatar">
+    <div id="header">
+        <span class="description">Dream Crusher - The worst teacher you ever had</span>
+        <div class="dropdown">
+            <div class="avatar">
                 # if g.user.is_authenticated
                     #if g.user.avatar_url
                         <img id="img-circle" src="{{g.user.avatar_url}}"/>
                     # endif
-                    {{ g.user.nickname }}| <a href="{{ url_for('auth.logout') }}">Logout</a>
+                    {{ g.user.nickname }}
                 # endif
-            </span>
+            </div>
+
+            <div class="dropdown-content">
+                <a href="{{ url_for('dreams.dreams') }}">Edit dreams</a>
+                <a href="{{ url_for('auth.logout') }}">Logout</a>
+            </div>
         </div>
+    </div>
     <div class=page>
           # block body
           # endblock
+    </div>
+    <div id="footer">
+        <div class="footer__desc">
+            ed9m, 2016
+        </div>
     </div>
 </body>
 </html>
