bug with js, added ajax ethod for day #DC-17 Done work development 2h fixed

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -228,7 +228,9 @@ h2              { font-size: 1.2em; }
     margin: 10px;
     width: 45%;
 }
-
+#week_number {
+    display: none;
+}
 .add_link {
     text-decoration: none;
     background: var(--accent-color);
