--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -5,7 +5,7 @@
 </head>
 <body id="body_404">
     <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
-    <img id="img_404" src="../static/images/404_plague_doctor.jpg">
+    <img id="img_404" src="{{ url_for('static', filename='images/404_plague_doctor.jpg') }}">
     <h1 id="h1_404">404</h1>
     <a href="{{url_for('main.index')}}"> Home </a>
 </body>
