--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5,17 +5,18 @@
   --title-color: #FFFFFA;
   --header-size: 50px;
 }
-
-/*bg: #232128
-text: #AAAAB2
-titles: #FFFFFA
-accent: #EB6454*/
-body            {
+html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+body {
     text-align: center;
     font-family: Verdana, sans-serif;
     width: 100%;
     height: 100%;
-    margin: auto;
+    margin: 0;
+    padding: 0;
 }
 a, h1, h2       { color: #383A36; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
@@ -74,10 +75,14 @@ h2              { font-size: 1.2em; }
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -50px;
+}
 #footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
     width: 100%;
     height: 50px;
     background: var(--bg-color);
@@ -88,11 +93,11 @@ h2              { font-size: 1.2em; }
     padding-top: 20px;
     font-size: 0.7em;
 }
-.page { margin: 2em auto; width: 60%;
-    padding: 0.8em;
-    color: var(--text-color);
-    height: 100%;
+.page {
+    margin: 50px auto auto auto;
+    width: 60%;
     padding-bottom: 60px;
+    color: var(--text-color);
     color: var(--bg-color);
 }
 
@@ -239,12 +244,10 @@ h2              { font-size: 1.2em; }
 
 input[type="text"] {
     margin: 0px 10px 10px 0px;
-
     font-family: sans-serif;
     font-size: 16px;
     appearance: none;
     box-shadow: none;
-    border-radius: none;
     padding: 10px;
     border: none;
     border-bottom: solid 2px #c9c9c9;
