--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -48,5 +48,6 @@
     <script  type="text/javascript" src="../static/js/jquery-2.2.4.min.js"> </script>
     <script  type="text/javascript" src="../static/js/chartist.min.js"> </script>
     <script  type="text/javascript" src="../static/js/dreams_scripts.js"> </script>
+    <script  type="text/javascript" src="../static/js/pomodoro.js"> </script>
 </body>
 </html>
